# RS-422-Tools

./: .clang-format  .clang-tidy  .containerignore  .gitignore  .gitlab-ci-local-variables.yml  .gitlab-ci.yml  CMakeLists.txt  Containerfile  README.md  compose.yaml  pyproject.toml
apps/: README.md  attitude_log.py  c2_log.py
apps/attitude_publisher/: __init__.py  __main__.py  main.cpp
apps/c2/: __init__.py  __main__.py  c2.py  main.cpp
apps/device_sim/: __init__.py  device_sim.py  registers.py
apps/monitor/: __init__.py  main.cpp
apps/sensor_sim/: __main__.py
ci/: integration_smoke.sh  setup.sh
cmake/toolchains/: aarch64-cortex-a72.cmake  riscv64-sifive-x280.cmake  riscv64-spacemit-k1.cmake  x86_64-broadwell.cmake  x86_64-znver2.cmake
docker/: Containerfile.build  Containerfile.ci  Containerfile.runtime
docs/: build-plan.md  ci-cd.md  extending-attitude-telemetry.md  hardware-testing.md  idd-attitude.md  idd-registers.md  plan-attempt2.md  simulation-testing.md
environments/c2/: compose.yaml  run.sh
environments/streaming/: compose.yaml  run.sh
include/serial_link/: attitude_log.hpp  cli.hpp  codec.hpp  common.hpp  fcs.hpp  framelog.hpp  framing.hpp  link.hpp  messages.hpp  transport.hpp
scripts/: make_vport.sh
serial_link/: __init__.py  framelog.py
serial_link/codec/: __init__.py  codec.py  messages.py
serial_link/codec/messages/: __init__.py  attitude.py  nak.py  write_register.py
serial_link/framing/: __init__.py
serial_link/link/: link.py
serial_link/transport/: base.py  cable.py
src/: attitude_log.cpp  cli.cpp  codec.cpp  fcs.cpp  framelog.cpp  framing.cpp  link.cpp  messages.cpp  transport.cpp
tests/: CMakeLists.txt  test_attitude_codec.cpp  test_attitude_codec.py  test_attitude_log.cpp  test_attitude_log.py  test_c2_log.py  test_fcs.cpp  test_framing.cpp  test_framing.py  test_link_loopback.cpp  test_register_codec.cpp  test_register_codec.py  test_registers.py
tools/: .containerignore  README.md
tools/apps/: README.md
tools/apps/attitude_publisher/: attitude_publisher.py
tools/apps/device_sim/: __main__.py
tools/apps/monitor/: __main__.py  monitor.py
tools/apps/sensor_sim/: __init__.py  sensor_sim.py
tools/serial_link/: __init__.py  cli.py
tools/serial_link/codec/messages/: read_register.py  read_response.py  write_ack.py
tools/serial_link/framing/: fcs.py  framing.py
tools/serial_link/link/: __init__.py  link.py
tools/serial_link/transport/: __init__.py  virtual.py
tools/tests/: test_attitude_publisher.py  test_fcs.py  test_request_response.py  test_stream_loopback.py
